--- a/emaillist/package.json
+++ b/emaillist/package.json
@@ -1,31 +1,56 @@
 {
   "name": "emaillist",
   "version": "1.0.0",
-  "description": "ex08: JSX Tutorials",
-  "main": "index.js",
-  "scripts": {
-    "debug": "npx webpack serve --config config/webpack.config.js --progress --mode development"
+  "description": "",
+  "main": "",
+  "scripts": {    
+    "start": "cross-env NODE_ENV=production nohup node backend/index.js --name $npm_package_name > /dev/null 2>&1 &",
+    "restart": "npm stop && npm start",
+    "stop": "pkill $npm_package_name",
+    "prestart": "npm run build",
+    "postinstall": "npm run build",
+        
+    "build": "npm run build:frontend && npm run build:backend",
+    "build:backend": "echo \"no build specified\"",
+    "build:frontend": "cross-env NODE_ENV=production webpack --config frontend/config/webpack.config.js --mode production --progress",
+
+    "test": "echo \"no test specified\"",
+
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\" --kill-others",
+    "dev:backend": "cross-env NODE_ENV=development nodemon backend/index.js -e js,mjs,json,env --watch backend --name $npm_package_name",
+    "dev:frontend": "cross-env NODE_ENV=development webpack serve --config frontend/config/webpack.config.js --mode development --progress"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.5.1",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "concurrently": "^6.2.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.2.0",
     "node-sass": "^6.0.1",
-    "sass-loader": "^12.3.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
+    "nodemon": "^2.0.12",
+    "prop-types": "^15.7.2",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "minimist": "^1.2.5",
+    "mysql2": "^2.2.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   }
 }
